Much work for first release

--- a/test/benchmark.html
+++ b/test/benchmark.html
@@ -4,8 +4,8 @@
 	<head>
 		<title>Hashtable Tests</title>
 		<script type="text/javascript" src="xntest.js"></script>
-		<script type="text/javascript" src="../hashtable_shrunk_minified.js"></script>
-		<script type="text/javascript" src="hashtabletests.js"></script>
+		<script type="text/javascript" src="../hashtable.js"></script>
+		<script type="text/javascript" src="benchmark.js"></script>
 		<link rel="stylesheet" type="text/css" href="tests.css"/>
 	</head>
 	<body>
