--- a/test/benchmark.html
+++ b/test/benchmark.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 	<head>
-		<title>Hashtable Tests</title>
+		<title>Hashtable 2.1 Benchmark Tests</title>
 		<script type="text/javascript" src="xntest.js"></script>
 		<script type="text/javascript" src="../hashtable.js"></script>
 		<script type="text/javascript" src="benchmark.js"></script>
