--- a/test/hashtable.html
+++ b/test/hashtable.html
@@ -2,10 +2,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 	<head>
-		<title>Hashtable Tests</title>
+		<title>Hashtable 2.1 Tests</title>
 		<script type="text/javascript" src="xntest.js"></script>
 		<script type="text/javascript" src="../hashtable.js"></script>
+        <script type="text/javascript" src="../hashset.js"></script>
 		<script type="text/javascript" src="hashtabletests.js"></script>
+        <script type="text/javascript" src="hashsettests.js"></script>
 		<link rel="stylesheet" type="text/css" href="tests.css"/>
 	</head>
 	<body>
